--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -64,7 +64,7 @@
                 android:layout_height="150dp"
                 android:layout_marginTop="68dp"
 
-                android:src="@drawable/ruan_foto"
+                android:src="@drawable/usuario_sem_foto"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/img_capa" />
