--- a/app/src/main/res/layout/activity_aula_ministrada.xml
+++ b/app/src/main/res/layout/activity_aula_ministrada.xml
@@ -41,7 +41,7 @@
                     android:layout_height="120dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ruan_foto" />
+                    app:srcCompat="@drawable/usuario_sem_foto" />
 
                 <TextView
                     android:id="@+id/txt_disciplinaAulaMinistrada"
