--- a/app/src/main/res/layout/item_anuncios.xml
+++ b/app/src/main/res/layout/item_anuncios.xml
@@ -19,7 +19,7 @@
             android:layout_height="170dp"
             android:layout_gravity="center_horizontal"
             android:scaleType="fitXY"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/usuario_sem_foto" />
 
         <TextView
             android:id="@+id/txt_nomeprof"
