--- a/app/src/main/res/layout/item_avaliacao.xml
+++ b/app/src/main/res/layout/item_avaliacao.xml
@@ -18,7 +18,7 @@
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_margin="5dp"
-            android:src="@drawable/ruan_foto" />
+            android:src="@drawable/usuario_sem_foto" />
 
         <LinearLayout
             android:layout_width="match_parent"
