--- a/app/src/main/res/layout/item_matriculados.xml
+++ b/app/src/main/res/layout/item_matriculados.xml
@@ -19,7 +19,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:scaleType="fitXY"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@drawable/usuario_sem_foto" />
 
         <TextView
             android:id="@+id/txt_nome"
